# california-housing-research

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  results.jsonl  task.yaml  train.py
ar/: __init__.py  analysis.py  cli.py  config.py  git_ops.py  metrics.py  platform.py  platform_utils.py  program_gen.py  runner.py  tracker.py
ar/templates/: __init__.py
ar/templates/tabular/: prepare.py  task.yaml  train.py
