[project]
name = "california-housing-research"
version = "0.1.0"
description = "Autonomous ML research on the California Housing dataset"
requires-python = ">=3.10"
dependencies = [
    "autoresearch",
    "scikit-learn>=1.4.0",
]

[tool.uv.sources]
autoresearch = { git = "https://github.com/somenbg/autoresearch.git", branch = "main" }
